logs/cloudshell-snmp.log
Listing '.'...
Listing './bin'...
Compiling './bin/mibdump.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Crypto'...
Listing './lib/python3.5/site-packages/Crypto/Cipher'...
Listing './lib/python3.5/site-packages/Crypto/Hash'...
Listing './lib/python3.5/site-packages/Crypto/IO'...
Listing './lib/python3.5/site-packages/Crypto/Math'...
Listing './lib/python3.5/site-packages/Crypto/Protocol'...
Listing './lib/python3.5/site-packages/Crypto/PublicKey'...
Listing './lib/python3.5/site-packages/Crypto/Random'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Cipher'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Cipher/test_vectors'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Cipher/test_vectors/AES'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Cipher/test_vectors/TDES'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors/BLAKE2b'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors/BLAKE2s'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors/SHA3'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors/keccak'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/IO'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Math'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Protocol'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/PublicKey'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/PublicKey/test_vectors'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/PublicKey/test_vectors/ECC'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Random'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors/DSA'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors/ECDSA'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors/PKCS1-PSS'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors/PKCS1-v1.5'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Util'...
Listing './lib/python3.5/site-packages/Crypto/Signature'...
Listing './lib/python3.5/site-packages/Crypto/Util'...
Listing './lib/python3.5/site-packages/cloudshell'...
Listing './lib/python3.5/site-packages/cloudshell/snmp'...
Listing './lib/python3.5/site-packages/cloudshell/snmp/mibs'...
Compiling './lib/python3.5/site-packages/cloudshell/snmp/mibs/LLDP-MIB.py'...
***   File "./lib/python3.5/site-packages/cloudshell/snmp/mibs/LLDP-MIB.py", line 127
    lldpRemIndex = MibTableColumn((1, 0, 8802, 1, 1, 2, 1, 4, 1, 1, 3), Integer32().subtype(subtypeSpec=constraint.ValueRangeConstraint(1, 2147483647L))).setMaxAccess("noaccess")
                                                                                                                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cloudshell_snmp-3.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/pyasn1'...
Listing './lib/python3.5/site-packages/pyasn1/codec'...
Listing './lib/python3.5/site-packages/pyasn1/codec/ber'...
Listing './lib/python3.5/site-packages/pyasn1/codec/cer'...
Listing './lib/python3.5/site-packages/pyasn1/codec/der'...
Listing './lib/python3.5/site-packages/pyasn1/codec/native'...
Listing './lib/python3.5/site-packages/pyasn1/compat'...
Listing './lib/python3.5/site-packages/pyasn1/type'...
Listing './lib/python3.5/site-packages/pyasn1-0.3.6.dist-info'...
Listing './lib/python3.5/site-packages/pycryptodome-3.4.7.egg-info'...
Listing './lib/python3.5/site-packages/pysmi'...
Listing './lib/python3.5/site-packages/pysmi/borrower'...
Listing './lib/python3.5/site-packages/pysmi/codegen'...
Listing './lib/python3.5/site-packages/pysmi/lexer'...
Listing './lib/python3.5/site-packages/pysmi/parser'...
Listing './lib/python3.5/site-packages/pysmi/reader'...
Listing './lib/python3.5/site-packages/pysmi/searcher'...
Listing './lib/python3.5/site-packages/pysmi/writer'...
Listing './lib/python3.5/site-packages/pysmi-0.1.3.dist-info'...
Listing './lib/python3.5/site-packages/pysnmp'...
Listing './lib/python3.5/site-packages/pysnmp/carrier'...
Listing './lib/python3.5/site-packages/pysnmp/carrier/asyncio'...
Listing './lib/python3.5/site-packages/pysnmp/carrier/asyncio/dgram'...
Listing './lib/python3.5/site-packages/pysnmp/carrier/asyncore'...
Listing './lib/python3.5/site-packages/pysnmp/carrier/asyncore/dgram'...
Listing './lib/python3.5/site-packages/pysnmp/carrier/asynsock'...
Listing './lib/python3.5/site-packages/pysnmp/carrier/asynsock/dgram'...
Listing './lib/python3.5/site-packages/pysnmp/carrier/twisted'...
Listing './lib/python3.5/site-packages/pysnmp/carrier/twisted/dgram'...
Listing './lib/python3.5/site-packages/pysnmp/entity'...
Listing './lib/python3.5/site-packages/pysnmp/entity/rfc3413'...
Listing './lib/python3.5/site-packages/pysnmp/entity/rfc3413/oneliner'...
Listing './lib/python3.5/site-packages/pysnmp/hlapi'...
Listing './lib/python3.5/site-packages/pysnmp/hlapi/asyncio'...
Listing './lib/python3.5/site-packages/pysnmp/hlapi/asyncore'...
Listing './lib/python3.5/site-packages/pysnmp/hlapi/asyncore/sync'...
Listing './lib/python3.5/site-packages/pysnmp/hlapi/asyncore/sync/compat'...
Listing './lib/python3.5/site-packages/pysnmp/hlapi/twisted'...
Listing './lib/python3.5/site-packages/pysnmp/proto'...
Listing './lib/python3.5/site-packages/pysnmp/proto/acmod'...
Listing './lib/python3.5/site-packages/pysnmp/proto/api'...
Listing './lib/python3.5/site-packages/pysnmp/proto/mpmod'...
Listing './lib/python3.5/site-packages/pysnmp/proto/proxy'...
Listing './lib/python3.5/site-packages/pysnmp/proto/secmod'...
Listing './lib/python3.5/site-packages/pysnmp/proto/secmod/eso'...
Listing './lib/python3.5/site-packages/pysnmp/proto/secmod/eso/priv'...
Listing './lib/python3.5/site-packages/pysnmp/proto/secmod/rfc3414'...
Listing './lib/python3.5/site-packages/pysnmp/proto/secmod/rfc3414/auth'...
Listing './lib/python3.5/site-packages/pysnmp/proto/secmod/rfc3414/priv'...
Listing './lib/python3.5/site-packages/pysnmp/proto/secmod/rfc3826'...
Listing './lib/python3.5/site-packages/pysnmp/proto/secmod/rfc3826/priv'...
Listing './lib/python3.5/site-packages/pysnmp/smi'...
Listing './lib/python3.5/site-packages/pysnmp/smi/mibs'...
Listing './lib/python3.5/site-packages/pysnmp/smi/mibs/instances'...
Listing './lib/python3.5/site-packages/pysnmp-4.3.9.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/snmp'...
Listing './lib/python3.5/site-packages/tests/snmp/quali_snmp'...
Compiling './lib/python3.5/site-packages/tests/snmp/test_snmp_parameters.py'...
***   File "./lib/python3.5/site-packages/tests/snmp/test_snmp_parameters.py", line 43
    print snmp.get_property("SNMPv2-MIB", "sysDescr", "0")
             ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
